# sbbbin

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
sbbbin/: __init__.py  cli.py  sbbbin.py
src/cli/: sbbbin_cli.py
src/sbbbin/: __init__.py  cli.py  sbb_binarization.py  sbbbin.py  util.py
