[project]
name = "sbbbin"
version = "0.4.0"
description = "Pixelwise image binarization with selectional auto-encoders."
readme = "README.md"
authors = [{ name = "jahtz", email = "jahtz.dev@proton.me" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "click ~= 8.3.1",
    "numpy ~= 2.4.3",
    "opencv-python ~= 4.13.0.92",
    "rich ~= 14.3.3",
    "torch >=2.7,<2.9",
    "torchvision >=0.22,<0.24",
    "onnx2torch ~= 1.5.15"
]

[project.scripts]
sbbbin = "sbbbin.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
