[project]
name = "sbbbin"
version = "1.0.0"
description = "Pixelwise image binarization with selectional auto-encoders."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "jahtz", email = "dev@janikhtz.de" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Science/Research",
    "Environment :: Console",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "click ~= 8.3.1",
    "numpy ~= 2.4.3",
    "opencv-python ~= 4.13.0.92",
    "rich ~= 14.3.3",
    "torch >=2.7,<2.9",
    "torchvision >=0.22,<0.24",
    "onnx2torch ~= 1.5.15"
]

[project.urls]
Homepage = "https://www.uni-wuerzburg.de/zpd/"
Repository = "https://github.com/jahtz/sbbbin"
Documentation = "https://github.com/jahtz/sbbbin#readme"
Issues = "https://github.com/jahtz/sbbbin/issues"

[project.scripts]
sbbbin = "sbbbin.cli:cli"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
